Avoid multiple errors on overlap with glossary checks

--- a/public/css/lxq-style.css
+++ b/public/css/lxq-style.css
@@ -909,7 +909,7 @@ article.lxq-commenting-opened .lxq-comment-balloon-outer {
 .l0 {
    background-color:#B792E6;
 }
-.bl0 {
+.b0 {
     text-decoration: line-through;
 }
 .g0 {
